--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	    <div class="eye"></div>
 	    <div class="eye"></div>
 	  </div>
+      <div class="freckles center">
+          <div class="freckle-set"></div>
+          <div class="freckle-set"></div>
+      </div>
 	  <div class="nose center"></div>
 	  <div class="mouth center"></div>
 	</div>
